--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+            <version>3.9.1</version>
+        </dependency>
+
 
 	</dependencies>
 
